<resources>
    <string name="app_name">Pacheco\'s Portfolio</string>
    <string name="nav_header_title">Pacheco\'s Collection</string>
    <string name="nav_header_subtitle">pacheco@gmx.de</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Pacheco</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_movies">Popular Movies</string>
    <string name="menu_jokes">Jokes</string>
    <string name="menu_baking">Baking recipes</string>
    <string name="menu_sandwich">Sandwich Club</string>
    <string name="hello_text">
        \nHello my name is Pacheco.\n\n
        This App is a collection of some smaller Apps i have created
        while getting my app creation skills up to date. I love to make great Apps with a nice
        User Experience. As of september 2020 this app is made with state of the art
        technologies. But as you know, you never stop learning.\n\n
        Checkout the source code if you like:\n
        <font size="12"><a href="https://github.com/pachecoberlin/Capstone-Project">https
            ://github.com/pachecoberlin/Capstone-Project</a></font></string>
    <string name="donate_with_paypal">Donate via PayPal</string>
    <string name="paypalmeURL">https://www.paypal.me/pachecoberlin</string>
    <string name="smiley">😉</string>
    <string name="giveThanks">Thank\'s! ❤</string>
    <string name="wave_recorder">Wave Recorder</string>
</resources>