<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.pacheco.capstone.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_movies"
        android:name="de.pacheco.popularMovies.MoviesFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_jokes"
        android:name="de.pacheco.capstone.jokes.JokesActivityFragment"
        android:label="@string/menu_jokes"
        tools:layout="@layout/fragment_jokes" />

    <fragment
        android:id="@+id/nav_baking"
        android:name="de.pacheco.bakingapp.activities.RecipeListActivity"
        android:label="@string/menu_baking"
        tools:layout="@layout/activity_recipe_list" />

    <fragment
        android:id="@+id/nav_sandwich"
        android:name="de.pacheco.sandwichclub.SandwichFragment"
        android:label="@string/menu_sandwich"
        tools:layout="@layout/fragment_sandwich" />

</navigation>
