<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <!--    android:background="@drawable/portrait"-->
    <!--    android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--    android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--    android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--    android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--    android:background="@drawable/side_nav_bar"-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/nav_header_desc"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/portrait" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:paddingStart="@dimen/nav_header_vertical_spacing"
        android:paddingEnd="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:paddingBottom="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:paddingStart="@dimen/nav_header_vertical_spacing"
        android:paddingEnd="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_subtitle" />
</FrameLayout>
